# allfinder

./: .gitignore  README.md  debug_extractor.py  debug_foxnews.py  extractor.py.temp  globoplay_m3u8.py  pyproject.toml  test_crawl4ai.py
allfinder/cli/: main.py
allfinder/core/: extractor.py
allfinder/plugins/: base.py  manager.py
m3u8_extractor/cli/: main.py
m3u8_extractor/core/: extractor.py
m3u8_extractor/plugins/: manager.py
m3u8_extractor_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/allfinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/allfinder/cli/: main.py
src/allfinder/core/: browser_profile.py  extractor.py  network_capture.py
src/allfinder/plugins/: manager.py
src/allfinder/plugins/generic/: base.py
src/allfinder/plugins/specific_sites/: __init__.py  globoplay.py
src/cli/: main.py
src/plugins/: manager.py
tests/: test_browser_profile.py  test_extractor.py  test_network_capture.py  test_plugins.py
