[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m3u8-extractor-bot"
version = "0.1.0"
description = "Uma ferramenta para extrair URLs .m3u8 de sites de streaming via automação de navegador."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.41.0",
]

[project.scripts]
m3u8-bot = "m3u8_extractor.cli.main:main_entry"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
